# liquidswap_flutter

./: README.md  analysis_options.yaml  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/sideswap/: MainActivity.kt
deploy/: libsideswap_client.sh  libwally.sh
deploy/windows/: installer.nsi
doc/: build.md
ffi/: Makefile  sideswap.proto
ios/Runner/: DummyImports.m  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  side_swap_client_ffi.dart
lib/common/: encryption.dart  helpers.dart  theme.dart  widgets.dart
lib/models/: wallet.dart
lib/protobuf/: sideswap.pb.dart  sideswap.pbjson.dart
lib/screens/: balances.dart  home.dart  license.dart  register.dart  settings.dart  swap.dart
linux/: CMakeLists.txt
rust/: Cargo.toml
rust/gdk_rust/gdk_common/src/be/: blockheader.rs
rust/gdk_rust/gdk_electrum/src/: interface.rs  store.rs
rust/gdk_rust/gdk_electrum/src/headers/: bitcoin.rs
rust/sideswap_api/src/: lib.rs
rust/sideswap_client/: Cargo.toml  build.rs
rust/sideswap_client/src/: ffi.rs  lib.rs  worker.rs
rust/sideswap_client_test/: Cargo.toml  build.rs
rust/sideswap_client_test/src/: main.rs
rust/sideswap_common/src/: types.rs  ws.rs
rust/sideswap_dealer_example/src/: main.rs  rpc.rs
rust/sideswap_libwally/src/: lib.rs
